force-app/main/default/objects/Automation_Controls__c/fields/Address_ByPass__c.field-meta.xml
<CustomField>
    <fullName>Address_ByPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address ByPass</label>
    <type>Checkbox</type>
</CustomField>