force-app/main/default/objects/Automation_Controls__c/fields/Bypass_ACV_Change_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ACV_Change_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ACV Change calculation automation in ACVChangeCalculationService will be bypassed.</description>
    <inlineHelpText>Check this to bypass the ACV Change calculation logic on Quote Lines.</inlineHelpText>
    <label>Bypass ACV Change Automation</label>
    <type>Checkbox</type>
</CustomField>