force-app/main/default/objects/Automation_Controls__c/fields/Bypass_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Flows</label>
    <type>Checkbox</type>
</CustomField>