force-app/main/default/objects/Automation_Controls__c/fields/Bypass_Staging_Capture__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Staging_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Staging Capture</label>
    <type>Checkbox</type>
</CustomField>