force-app/main/default/objects/Automation_Controls__c/fields/Contract_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Contract_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Bypass</label>
    <type>Checkbox</type>
</CustomField>