force-app/main/default/objects/Automation_Controls__c/fields/Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Id__c</fullName>
    <description>Comma separated value, If any ID in this list found, the trigger/flow execution would be bypassed even in bulk operations.</description>
    <inlineHelpText>MAINTAIN CAUTION. If any ID in this list found, the trigger/flow execution would be bypassed even in bulk operations.</inlineHelpText>
    <label>Data Id</label>
    <type>TextArea</type>
</CustomField>