force-app/main/default/objects/Automation_Controls__c/fields/ItemMasterProduct_ByPass__c.field-meta.xml
<CustomField>
    <fullName>ItemMasterProduct_ByPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ItemMasterProduct ByPass</label>
    <type>Checkbox</type>
</CustomField>