force-app/main/default/objects/Automation_Controls__c/fields/Opportunity_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Bypass</label>
    <type>Checkbox</type>
</CustomField>