force-app/main/default/objects/Automation_Controls__c/fields/OpportunityLine_Bypass__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLine_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityLine Bypass</label>
    <type>Checkbox</type>
</CustomField>