force-app/main/default/objects/Automation_Controls__c/fields/Order_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Order_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Bypass</label>
    <type>Checkbox</type>
</CustomField>