force-app/main/default/objects/Automation_Controls__c/fields/Orderline_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Orderline_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orderline Bypass</label>
    <type>Checkbox</type>
</CustomField>