force-app/main/default/objects/Automation_Controls__c/fields/TermQuote_Bypass__c.field-meta.xml
<CustomField>
    <fullName>TermQuote_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Quote Bypass</label>
    <type>Checkbox</type>
</CustomField>